[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rs-cmw500-mcp"
version = "0.3.0"
description = "MCP server for Rohde & Schwarz CMW500 Wideband Radio Communication Tester via TCP/IP SCPI"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Adam Engelbrecht", email = "adam@rfingadam.com" }
]
keywords = [
    "mcp",
    "cmw500",
    "rohde-schwarz",
    "scpi",
    "test-automation",
    "rf-testing",
    "lte",
    "cellular",
    "wlan",
    "wifi",
    "bluetooth",
    "ble",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
rs-cmw500-mcp = "rs_cmw500_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/RFingAdam/mcp-rs-cmw500"
Repository = "https://github.com/RFingAdam/mcp-rs-cmw500"
Issues = "https://github.com/RFingAdam/mcp-rs-cmw500/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rs_cmw500_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real CMW500 hardware (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
